--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -1,8 +1,4 @@
 #version: '3.9'
-secrets:
-  mysql_password:
-    file: ./secrets/mysql_password.txt
-    
 volumes:
   mysql_data_volume:
     driver: local
@@ -22,28 +18,30 @@ services:
     container_name: mysql-container
     image: mysql:latest
     environment:
-      MYSQL_ROOT_PASSWORD: bob
-      MYSQL_DATABASE: wp_db
-      MYSQL_USER: ${MYSQL_USER}
-      #- MYSQL_PASSWORD=${MYSQL_PASSWORD}
-      MYSQL_PASSWORD_FILE: /run/secrets/mysql_password
-    secrets:
-      - mysql_password
+      - MYSQL_ROOT_PASSWORD=bob
+      - MYSQL_DATABASE=wp_db
+      - MYSQL_USER=${MYSQL_USER}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
     volumes:
       - mysql_data_volume:/var/lib/mysql
       #- d:/docker/data/mysql_data:/var/lib/mysql
     networks:
       - backend
+    restart: always
+    healthcheck:
+      test: ["CMD-SHELL", "mysqladmin ping -h localhost -u root -pbob || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
 
   phpmyadmin:
     container_name: phpmyadmin-container
     image: phpmyadmin:latest
     environment:
-      PMA_HOST: database
-      PMA_USER: ${MYSQL_USER}
-      PMA_PASSWORD_FILE: /run/secrets/mysql_password
-    secrets:
-      - mysql_password
+      - PMA_HOST=database
+      - PMA_USER=${MYSQL_USER}
+      - PMA_PASSWORD=${MYSQL_PASSWORD}
     ports:
       - "8080:80"
     networks:
@@ -56,12 +54,10 @@ services:
     container_name: wordpress-container
     image: wordpress:latest
     environment:
-      WORDPRESS_DB_HOST: database:3306
-      WORDPRESS_DB_USER: ${MYSQL_USER}
-      WORDPRESS_DB_PASSWORD_FILE: /run/secrets/mysql_password
-      WORDPRESS_DB_NAME: wp_db
-    secrets:
-      - mysql_password
+      - WORDPRESS_DB_HOST=database:3306
+      - WORDPRESS_DB_USER=${MYSQL_USER}
+      - WORDPRESS_DB_PASSWORD=${MYSQL_PASSWORD}
+      - WORDPRESS_DB_NAME=wp_db
     ports:
       - "8000:80"
     networks:
@@ -69,4 +65,10 @@ services:
       - backend
     depends_on:
       - database
-
+    restart: always
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost/wp-login.php || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
